# notify

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: crypto.yml  daily.yml  events.yml  intraday.yml
app/: __init__.py  __main__.py  analyzer.py  brief.py  config.py  dedup.py  http.py  logging_setup.py  models.py  pipeline.py  scheduler.py
app/collectors/: __init__.py  base.py  finnhub.py  registry.py  rss.py  sec.py
app/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openai_compat.py
app/market/: __init__.py  attribution.py  calendar.py  crypto.py  hours.py  movers.py  provider.py  snapshot.py
app/notifiers/: __init__.py  base.py  feishu.py  message.py  pushplus.py  registry.py  render.py  serverchan.py
docs/: PLAN.md
tests/: test_crypto.py  test_movers.py  test_pipeline.py  test_sec.py
