[project]
name = "notify"
version = "0.1.0"
description = "Daily AI/stock/finance news pipeline: collect -> dedup -> AI analysis -> push to WeChat/Feishu bots"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
